force-app/main/default/src/objects/HealthCloudGA__Provider__c/HealthCloudGA__Provider__c.object-meta.xml
<CustomObject>
    <label>Provider</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>