force-app/main/default/src/objects/HealthCloudGA__Provider__c/fields/HealthCloudGA__EHRPractitioner__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EHRPractitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EHR Practitioner</label>
    <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>