force-app/main/default/src/objects/HealthCloudGA__Provider__c/fields/HealthCloudGA__RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>