force-app/main/default/src/objects/HealthCloudGA__Provider__c/fields/HealthCloudGA__RelatedUser__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelatedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>